--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,102 @@
-salam salam :D hamegi salam :D
+<mat-sidenav-container style="height: 100%"
+  class="example-container" (backdropClick)="close('backdrop')">
+  <mat-sidenav #sidenav mode="over" [class.mat-elevation-z4]="true" style="width: 240px">
+    <mat-nav-list dense>
+      <mat-list-item (click)="sidenav.close()"><mat-icon class="example-icon">chevron_left</mat-icon></mat-list-item>
+      <mat-list-item><mat-icon class="example-icon">dashboard</mat-icon>Dashboard</mat-list-item>
+      <mat-list-item><mat-icon class="example-icon">check_box</mat-icon>General</mat-list-item>
+      <mat-list-item><mat-icon class="example-icon">person</mat-icon>Profile</mat-list-item>
+      <mat-list-item><mat-icon class="example-icon">notification_important</mat-icon>Notification</mat-list-item>
+      <mat-expansion-panel [class.mat-elevation-z0]="true" dense>
+        <mat-expansion-panel-header>
+          Preference
+        </mat-expansion-panel-header>
+        <mat-nav-list dense>
+          <a mat-list-item routerLink="#"><mat-icon>attach_money</mat-icon>Billing</a>
+          <a mat-list-item routerLink="#"><mat-icon>notification_important</mat-icon>Notification</a>
+        </mat-nav-list>
+      </mat-expansion-panel>
+      <mat-expansion-panel [class.mat-elevation-z0]="true" dense>
+        <mat-expansion-panel-header>
+          Privacy
+        </mat-expansion-panel-header>
+        <mat-nav-list dense>
+          <a mat-list-item routerLink="#"><mat-icon>person_add</mat-icon>Partnership Request</a>
+          <a mat-list-item routerLink="#"><mat-icon>visibility</mat-icon>Profile Visibility</a>
+        </mat-nav-list>
+      </mat-expansion-panel>
+    </mat-nav-list>
+  </mat-sidenav>
+
+  <mat-sidenav-content>
+
+    <mat-toolbar color="primary">
+      <button mat-icon-button aria-label="Example icon-button with a menu icon" (click)="sidenav.open()">
+        <mat-icon>menu</mat-icon>
+      </button>
+      <span>My Application</span>
+      <span class="example-spacer"></span>
+
+      <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+        <mat-icon>more_vert</mat-icon>
+      </button>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item>
+          <mat-icon>dialpad</mat-icon>
+          <span>Redial</span>
+        </button>
+        <button mat-menu-item disabled>
+          <mat-icon>voicemail</mat-icon>
+          <span>Check voice mail</span>
+        </button>
+        <button mat-menu-item>
+          <mat-icon>notifications_off</mat-icon>
+          <span>Disable alerts</span>
+        </button>
+      </mat-menu>
+
+    </mat-toolbar>
+
+
+    <div class="container">
+      <mat-card class="example-card">
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title>Shiba Inu</mat-card-title>
+          <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+        </mat-card-header>
+        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+          <p>
+            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+            A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+            bred for hunting.
+          </p>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button>LIKE</button>
+          <button mat-button>SHARE</button>
+        </mat-card-actions>
+      </mat-card>
+      <mat-card class="example-card">
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title>Shiba Inu</mat-card-title>
+          <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+        </mat-card-header>
+        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+          <p>
+            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+            A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+            bred for hunting.
+          </p>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button>LIKE</button>
+          <button mat-button>SHARE</button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
